# aoc_2024

./: .gitignore  Cargo.toml
.github/workflows/: codspeed.yml
benches/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
input/2024/: day1.txt  day4.txt
src/: day1.rs  day10.rs  day11.rs  day11_generator.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
