[package]
name = "rust_nrjv_aoc_2024"
version = "0.0.2"
authors = ["Nicolas Vidal <pro@nicolasvidal.fr>"]
edition = "2021"

[[bench]]
name = "day1"
harness = false

[[bench]]
name = "day2"
harness = false

[[bench]]
name = "day3"
harness = false

[[bench]]
name = "day4"
harness = false

[[bench]]
name = "day5"
harness = false

[[bench]]
name = "day6"
harness = false

[[bench]]
name = "day7"
harness = false

[[bench]]
name = "day8"
harness = false

[[bench]]
name = "day9"
harness = false

[[bench]]
name = "day10"
harness = false

[[bench]]
name = "day11"
harness = false

[[bench]]
name = "day12"
harness = false

[[bench]]
name = "day13"
harness = false

[[bench]]
name = "day14"
harness = false

[lib]
bench = false

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
rust-crypto = "0.2.36"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
heapless = "0.8.0"
memchr = "2.7.4"
rustc-hash = "2.1.0"
criterion = { package = "codspeed-criterion-compat", version = "*" }
image = "0.25.5"